--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ $(document).ready(function()
         <li> <a href="about.html"> My Calendar </a> </li>
         <li> <a href="about.html"> Profile </a> </li>
         <li> <a href="about.html"> Settings </a> </li>
+        <li> <a href="login.html"> Login </a> </li>
     </ul>
   </div>
 </div>
@@ -130,7 +131,8 @@ $(document).ready(function()
   </div>
     <!-- Center Column setup-->
   	<div class="col-sm-6">
-      <div class="feed">
+<!--       <iframe>
+ -->      <div class="feed">
 
         <!-- Each of these is a header that says something like "Mary Smith to APUSh" and then a "feedBoxy" section with the actual content that was "posted"-->
         <div class="myHeader2" style="margin-top: 10px"> <!-- This one has a top margin because it's first, and this way it lines up with the left column-->
