--- a/login.html
+++ b/login.html
@@ -16,7 +16,44 @@
   <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyB3djWUB8OEdYHsMxCOp2iTjKKrtheswDA",
+    authDomain: "studilife-7a2fc.firebaseapp.com",
+    databaseURL: "https://studilife-7a2fc.firebaseio.com",
+    storageBucket: "studilife-7a2fc.appspot.com",
+    messagingSenderId: "910045511452"
+  };
+  firebase.initializeApp(config);
 
+  var provider = new firebase.auth.GoogleAuthProvider();
+  provider.addScope('https://www.googleapis.com/auth/plus.login');
+
+  firebase.auth().signInWithPopup(provider).then(function(result) {
+  // This gives you a Google Access Token. You can use it to access the Google API.
+  var token = result.credential.accessToken;
+  // The signed-in user info.
+  var user = result.user;
+  // ...
+}).catch(function(error) {
+  // Handle Errors here.
+  var errorCode = error.code;
+  var errorMessage = error.message;
+  // The email of the user's account used.
+  var email = error.email;
+  // The firebase.auth.AuthCredential type that was used.
+  var credential = error.credential;
+  // ...
+});
+
+firebase.auth().signOut().then(function() {
+  // Sign-out successful.
+}).catch(function(error) {
+  // An error happened.
+});
+
+</script>
 
 <body>
 
@@ -27,6 +64,9 @@
 <div class="col-md-4">
 	<div id="loginDiv">
 		Please sign in here with your google account
+    <p>
+    <button type="button" class="btn btn-default" id="loginButton" onclick="signInWithPopup(provider);"> Click Here to Sign In </button>
+  </p>
 	</div>
 </div>
 
