--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
 </div>
 
 <script>
-  console.log("11:08 version working");
+  console.log("11:10 version working");
   // Initialize Firebase
   var config = {
     apiKey: "AIzaSyB3djWUB8OEdYHsMxCOp2iTjKKrtheswDA",
@@ -51,7 +51,7 @@
   var provider = new firebase.auth.GoogleAuthProvider();
   provider.addScope('https://www.googleapis.com/auth/plus.login');
 
-function signIn = function(){ 
+var signIn = function(){ 
   console.log("signing in")
       firebase.auth().signInWithPopup(provider).then(function(result) {
       // This gives you a Google Access Token. You can use it to access the Google API.
