--- a/login.html
+++ b/login.html
@@ -25,9 +25,10 @@
 
 <div class="col-md-4">
 	<div id="loginDiv">
-		Please sign in here with your google account
+		<p> Welcome to StudiLife! </p>
+    <p> To get started collaborating with your classmates, you'll need to sign in with a google account. Please click below to sign in or create an account. </p>
     <p>
-    <button type="button" class="btn btn-default" id="loginButton" onclick="signIn();"> Click Here to Sign In </button>
+    <button type="button" class="btn btn-default" id="loginButton" onclick="signIn();"> Sign In with Google </button>
   </p>
 	</div>
 </div>
@@ -38,7 +39,7 @@
 <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
 
 <script>
-  console.log("11:12 version working");
+  console.log("11:16 version working");
   // Initialize Firebase
   var config = {
     apiKey: "AIzaSyB3djWUB8OEdYHsMxCOp2iTjKKrtheswDA",
