--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@ $(document).ready(function()
 
 <!-- setting up page layout -->
 <div class="container fullWidth">
+
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#welcomeModal">
+  Launch demo modal
+</button>
+
+
+
   <div class="row">
     <img src="logo.png" id="logo">
   </div>
@@ -263,48 +270,24 @@ $(document).ready(function()
       </div>
 
   	</div>
+
+<!-- Modal -->
+<div class="modal fade" id="welcomeModal" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span> </button>
+        <p id="welcomeBar"> </p>
+      </div>
+    </div>
   </div>
+</div>
 
 </div>
 <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyB3djWUB8OEdYHsMxCOp2iTjKKrtheswDA",
-    authDomain: "studilife-7a2fc.firebaseapp.com",
-    databaseURL: "https://studilife-7a2fc.firebaseio.com",
-    storageBucket: "studilife-7a2fc.appspot.com",
-    messagingSenderId: "910045511452"
-  };
-  firebase.initializeApp(config);
 
-  var provider = new firebase.auth.GoogleAuthProvider();
-  provider.addScope('https://www.googleapis.com/auth/plus.login');
-
-  firebase.auth().signInWithPopup(provider).then(function(result) {
-  // This gives you a Google Access Token. You can use it to access the Google API.
-  var token = result.credential.accessToken;
-  // The signed-in user info.
-  var user = result.user;
-  // ...
-}).catch(function(error) {
-  // Handle Errors here.
-  var errorCode = error.code;
-  var errorMessage = error.message;
-  // The email of the user's account used.
-  var email = error.email;
-  // The firebase.auth.AuthCredential type that was used.
-  var credential = error.credential;
-  // ...
-});
-
-firebase.auth().signOut().then(function() {
-  // Sign-out successful.
-}).catch(function(error) {
-  // An error happened.
-});
-
-</script>
+<script src="login.js"> </script>
 
 </body>
 
