--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@ $(document).ready(function()
 <!-- setting up page layout -->
 <div class="container fullWidth">
 
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#welcomeModal">
+<!--     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#welcomeModal">
   Launch demo modal
-</button>
+</button> -->
 
 
 
@@ -276,8 +276,8 @@ $(document).ready(function()
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-body">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span> </button>
+         <p> <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span> </button> </p>
         <p id="welcomeBar"> </p>
       </div>
     </div>
@@ -286,7 +286,6 @@ $(document).ready(function()
 
 </div>
 <script src="https://www.gstatic.com/firebasejs/3.7.1/firebase.js"></script>
-
 <script src="login.js"> </script>
 
 </body>
