--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
 <div class="col-md-4">
 </div>
 <script src="https://www.gstatic.com/firebasejs/3.7.2/firebase.js"></script>
-
+<script src="firebaseConfig.js"> </script>
 <script src="login.js"> </script>
 
 </body>
